// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="month-navigation"
>
  <button
    onClick={[MockFunction]}
  >
    <IconUp />
  </button>
  <button
    onClick={[MockFunction]}
  >
    <IconDown />
  </button>
</div>
`;

exports[`should render correctly with given className 1`] = `
<div
  className="month-navigation my-class"
>
  <button
    onClick={[MockFunction]}
  >
    <IconUp />
  </button>
  <button
    onClick={[MockFunction]}
  >
    <IconDown />
  </button>
</div>
`;
